# openid-connect-poc

./: LICENSE.md  README.md
api/: .gitignore  pyproject.toml
api/api/: settings.py  urls.py
api/core/: models.py  serializers.py  urls.py  utils.py  views.py
api/core/migrations/: 0001_initial.py  0002_remove_user_client_id_user_is_sso_user_sso_id.py  0003_rename_session_id_usersession_token.py  0004_alter_user_managers_delete_usersession.py  0005_task.py
api/static/email_templates/: credentials-share-email.html  forgot-password.html  user-registration.html
ui/: package-lock.json  package.json
ui/src/: styles.css
ui/src/app/: app-routing.module.ts  app.component.ts  app.module.ts  auth.guard.ts
ui/src/app/constants/: urls.ts
ui/src/app/header/: header.component.html  header.component.ts
ui/src/app/login/: auth.service.ts  login.component.css  login.component.html  login.component.ts
ui/src/app/tasks/: task.model.ts  tasks.service.ts
